Fix the issue of not being able to access parent class fields